// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Survey Titles modal should show a disabled copy button when the survey company has survey UDFs 1`] = `
<pf-survey
  activeRoute={[Function Object]}
  deleteFailed="false"
  enumSurveyDelete={[Function Object]}
  hasLoadingError$={[Function Store]}
  isLoadingData$={[Function Store]}
  loadingErrorMessage={[Function String]}
  rootStore={[Function Store]}
  selectedItemMatchCount="0"
  shouldRefreshGrid$={[Function Store]}
  store={[Function Store]}
  surveyApi={[Function Object]}
  surveyData$={[Function Store]}
  surveyYearId={[Function Number]}
  surveys={[Function Array]}
  systemUserGroupsId={[Function Number]}
  userContext$={[Function Observable]}
>
  <pf-page-with-title-bar>
    
      
    
    <pf-async-container>
      <pf-input-debounce />
      <table
        class="table table-hover"
      >
        <thead>
          <tr>
            
            <th>
              Survey
            </th>
            <th>
              ID
            </th>
            <th>
              Code
            </th>
            <th>
              # Jobs
            </th>
            <th>
              # Data Cuts
            </th>
            <th>
              # Participants
            </th>
            <th>
              # Published Matches
            </th>
            <th>
              # Project Matches
            </th>
            <th>
              Map Companies
            </th>
            <th />
          </tr>
        </thead>
        <tbody>
          
          <tr>
            
            <td>
              
            </td>
            <td>
              
            </td>
            <td>
              
            </td>
            <td>
              
            </td>
            <td>
              
            </td>
            <td>
              
            </td>
            <td>
              
            </td>
            <td>
              
            </td>
            <td
              style="cursor: pointer"
            >
              <u>
                
              </u>
            </td>
            <td>
              <button
                class="btn btn-info btn-sm"
                disabled=""
                title="Copy functionality is not available for this survey as it contains company specific custom fields"
                type="button"
              >
                 Copy Survey 
              </button>
                 
              
              
              
              
                 
              
              
            </td>
          </tr>
        </tbody>
      </table>
      
      <button
        class="btn btn-sm"
        type="button"
      >
        Add Survey
      </button>
         
      <button
        class="btn btn-sm"
        type="button"
      >
        Back to Survey Years
      </button>
    </pf-async-container>
  </pf-page-with-title-bar><pf-add-survey-modal /><pf-map-company-modal /><pf-copy-survey-modal /><pf-delete-confirmation-modal />
</pf-survey>
`;

exports[`Add Survey Titles modal should show an enabled copy button when the survey company does not have survey UDFs 1`] = `
<pf-survey
  activeRoute={[Function Object]}
  deleteFailed="false"
  enumSurveyDelete={[Function Object]}
  hasLoadingError$={[Function Store]}
  isLoadingData$={[Function Store]}
  loadingErrorMessage={[Function String]}
  rootStore={[Function Store]}
  selectedItemMatchCount="0"
  shouldRefreshGrid$={[Function Store]}
  store={[Function Store]}
  surveyApi={[Function Object]}
  surveyData$={[Function Store]}
  surveyYearId={[Function Number]}
  surveys={[Function Array]}
  systemUserGroupsId={[Function Number]}
  userContext$={[Function Observable]}
>
  <pf-page-with-title-bar>
    
      
    
    <pf-async-container>
      <pf-input-debounce />
      <table
        class="table table-hover"
      >
        <thead>
          <tr>
            
            <th>
              Survey
            </th>
            <th>
              ID
            </th>
            <th>
              Code
            </th>
            <th>
              # Jobs
            </th>
            <th>
              # Data Cuts
            </th>
            <th>
              # Participants
            </th>
            <th>
              # Published Matches
            </th>
            <th>
              # Project Matches
            </th>
            <th>
              Map Companies
            </th>
            <th />
          </tr>
        </thead>
        <tbody>
          
          <tr>
            
            <td>
              
            </td>
            <td>
              
            </td>
            <td>
              
            </td>
            <td>
              
            </td>
            <td>
              
            </td>
            <td>
              
            </td>
            <td>
              
            </td>
            <td>
              
            </td>
            <td
              style="cursor: pointer"
            >
              <u>
                
              </u>
            </td>
            <td>
              <button
                class="btn btn-info btn-sm"
                title=""
                type="button"
              >
                 Copy Survey 
              </button>
                 
              
              
              
              
                 
              
              
            </td>
          </tr>
        </tbody>
      </table>
      
      <button
        class="btn btn-sm"
        type="button"
      >
        Add Survey
      </button>
         
      <button
        class="btn btn-sm"
        type="button"
      >
        Back to Survey Years
      </button>
    </pf-async-container>
  </pf-page-with-title-bar><pf-add-survey-modal /><pf-map-company-modal /><pf-copy-survey-modal /><pf-delete-confirmation-modal />
</pf-survey>
`;
